--- a/env.template
+++ b/env.template
@@ -81,6 +81,9 @@ TRADING_BOT_LOG_LEVEL=INFO
 TRADING_BOT_WS_PING_INTERVAL=30
 TRADING_BOT_WS_RECONNECT_ATTEMPTS=5
 
+# Trade loop interval in seconds (how often the main trading loop runs)
+TRADE_LOOP_TIME=30
+
 # =============================================================================
 # TESTING ONLY SETTINGS
 # =============================================================================
