--- a/config/testing_config.yaml
+++ b/config/testing_config.yaml
@@ -4,16 +4,16 @@
 trading:
   mode: "testing"
   trading_pairs:
-    - "BTC/USDT"
-    - "ETH/USDT"
-    - "SOL/USDT"
-    - "XRP/USDT"
-    - "DOGE/USDT"
-    - "ADA/USDT"
-    - "DOT/USDT"
-    - "LINK/USDT"
-    - "SHIB/USDT"
-    - "SUI/USDT"
+    - "BTC_USDT_PERP"
+    - "ETH_USDT_PERP"
+    - "SOL_USDT_PERP"
+    - "XRP_USDT_PERP"
+    - "DOGE_USDT_PERP"
+    - "ADA_USDT_PERP"
+    - "DOT_USDT_PERP"
+    - "LINK_USDT_PERP"
+    - "SHIB_USDT_PERP"
+    - "SUI_USDT_PERP"
   max_position_size: 0.10  # Conservative 5% position size
   default_leverage: 15.0    # No leverage in testing
   stop_loss_percentage: 3.5
