--- a/env.template
+++ b/env.template
@@ -84,6 +84,9 @@ TRADING_BOT_WS_RECONNECT_ATTEMPTS=5
 # Trade loop interval in seconds (how often the main trading loop runs)
 TRADE_LOOP_TIME=30
 
+# Analysis interval in seconds (how often to query Perplexity)
+TRADING_BOT_ANALYSIS_INTERVAL=300
+
 # =============================================================================
 # TESTING ONLY SETTINGS
 # =============================================================================
