--- a/env.template
+++ b/env.template
@@ -30,7 +30,7 @@ TRADING_BOT_MAX_POSITION_SIZE=0.1
 # Default leverage (1.0 = no leverage, 2.0 = 2x leverage)
 TRADING_BOT_DEFAULT_LEVERAGE=1.0
 
-# Stop loss percentage
+# Stop loss percentage (e.g., 2.0 = 2% below/above entry for auto-correction and default risk)
 TRADING_BOT_STOP_LOSS=2.0
 
 # Take profit percentage  
